feat: implement GET /smart-contracts/{scInfoId}/revisions (#12) - EBSIINT-2665
